public class AnimationStrings
{
    internal static string isActive = "isActive";
    internal static string isGrounded = "isGrounded";
    internal static string isMoving = "isMoving";
    internal static string isCharged = "isCharged";

    internal static string isOnStairs = "isOnStairs";

    internal static string isMovingOnStairs = "isMovingOnStairs";

    internal static string startGame = "startGame";
}